Added the label, hopefully one of the final commits

--- a/sleepApp/Resources/layout/activity_main.xml
+++ b/sleepApp/Resources/layout/activity_main.xml
@@ -96,6 +96,7 @@
             android:layout_marginTop="30px"
             android:textAlignment="center"
             android:text="I need to wake up at:"
+            android:textSize="15dp"
             android:id="@+id/wakeUpTextView"
             android:layout_below="@id/times5And6"
             />
@@ -219,6 +220,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30px"
+            android:textSize="15dp"
             android:textAlignment="center"
             android:text="If I go to bed now:"
             android:id="@+id/goToBedNowTextView"
@@ -234,6 +236,13 @@
             android:layout_marginTop="20px"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="35dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="It takes on average, 14 minutes for a person to fall asleep so plan accordingly"
+            android:layout_alignParentBottom="true"
+            />
 
     </RelativeLayout>
 
